tests/fixtures/invalid/dict_pow_dict.py
# Cannot power Dict[str, int] and Dict[str, int]
x: dict[str, int] = {"a": 1} ** {"a": 1}
